<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WidgetTaskFragment">

    <TextView
        android:id="@+id/innerTextTodaysTasks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/amaranth_regular"
        android:text="@string/todayTasks"
        android:textColor="?widgetDefaultTextColor"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/innerTextDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="24dp"
        android:fontFamily="@font/amaranth_regular"
        android:text="@string/dateHolder"
        android:textColor="?widgetDateTextColor"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/innerTextTodaysTasks"
        tools:ignore="TextSizeCheck,TextContrastCheck" />

    <TextView
        android:id="@+id/innerTextAll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/amaranth_bold"
        android:text="@string/widgetAll"
        android:textColor="?widgetSelectedTextColor"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/innerTextOpen"
        app:layout_constraintHorizontal_bias="0.33"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/innerTextDate" />

    <TextView
        android:id="@+id/innerTextOpen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/amaranth_bold"
        android:text="@string/widgetOpen"
        android:textColor="?widgetNonSelectedTextColor"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/innerTextDate"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/innerTextClosed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/amaranth_bold"
        android:text="@string/widgetClosed"
        android:textColor="?widgetNonSelectedTextColor"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.66"
        app:layout_constraintStart_toEndOf="@+id/innerTextOpen"
        app:layout_constraintTop_toBottomOf="@+id/innerTextDate"
        tools:ignore="TextContrastCheck" />

    <View
        android:id="@+id/innerLineLayout"
        android:layout_width="match_parent"
        android:layout_height="1.5dp"
        android:layout_marginTop="10dp"
        android:background="?widgetLineDefaultColor"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/innerTextOpen" />

    <View
        android:id="@+id/innerSelectedLine"
        android:layout_width="0dp"
        android:layout_height="1.5dp"
        android:background="?widgetSelectedTextColor"
        app:layout_constraintBottom_toBottomOf="@id/innerLineLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/innerLineLayout"
        app:layout_constraintWidth_percent="0.33" />

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/innerLineLayout" />


</androidx.constraintlayout.widget.ConstraintLayout>