<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="317.67dp"
    android:layout_height="98.33dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/component_stepcounter_background"
    android:gravity="center_vertical"
    android:paddingHorizontal="13.33dp">

    <View
        android:id="@+id/icon"
        android:layout_width="66.67dp"
        android:layout_height="66.67dp"
        android:background="@drawable/icon_stepcounter_1x"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        android:id="@+id/stepcounter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/amaranth_regular"
        android:text="@string/stepHolder"
        android:textColor="@color/stepCounter_light_red"
        android:textSize="21.33sp"
        android:layout_marginBottom="5dp"
        android:layout_marginStart="15dp"
        app:layout_constraintBottom_toBottomOf="@+id/icon"
        app:layout_constraintStart_toEndOf="@id/icon"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textSteps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:fontFamily="@font/amaranth_regular"
        android:text="@string/steps"
        android:textColor="?stepCounterDefaultTextColor"
        android:textSize="21.33sp"
        app:layout_constraintStart_toEndOf="@id/stepcounter"
        app:layout_constraintTop_toTopOf="@+id/stepcounter" />

    <TextView
        android:id="@+id/textTarget"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/amaranth_regular"
        android:text="@string/stepTarget"
        android:textColor="?stepCounterTargetTextColor"
        android:textSize="15.00sp"
        android:layout_marginStart="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/icon"
        app:layout_constraintTop_toTopOf="@+id/stepcounter" />

    <TextView
        android:id="@+id/target"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:fontFamily="@font/amaranth_regular"
        android:text="@string/stepTargetHolder"
        android:textColor="?stepCounterTargetTextColor"
        android:textSize="15.00sp"
        app:layout_constraintStart_toEndOf="@id/textTarget"
        app:layout_constraintTop_toTopOf="@+id/textTarget" />

    <TextView
        android:id="@+id/textTargetSteps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:fontFamily="@font/amaranth_regular"
        android:text="@string/steps"
        android:textColor="?stepCounterTargetTextColor"
        android:textSize="15.00sp"
        app:layout_constraintStart_toEndOf="@id/target"
        app:layout_constraintTop_toTopOf="@id/textTarget" />

    <View
        android:id="@+id/right_arrow"
        android:layout_width="12.33dp"
        android:layout_height="21.33dp"
        android:background="@drawable/icon_right_arrow"
        android:layout_marginEnd="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />



</androidx.constraintlayout.widget.ConstraintLayout>