<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:elevation="10dp"
    android:background="@drawable/component_widget_task_row_background">


    <LinearLayout
        android:id="@+id/taskTextParentLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/amaranth_regular"
                android:text="@string/loremShort"
                android:textColor="?defaultTextColor"
                android:textSize="22sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/amaranth_regular"
                android:text="@string/loremShort"
                android:textColor="?taskDescriptionTextColor"
                android:textSize="18sp"
                android:layout_marginTop="5dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="end|center_vertical">

            <View
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@drawable/component_task_checkbox_background" />

        </LinearLayout>
    </LinearLayout>

    <View
        android:id="@+id/taskLine"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/taskTextParentLayout"
        android:background="?taskLineColor"
        android:layout_marginTop="20dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/taskLine"
        android:gravity="center_vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_vertical">

            <View
                android:layout_width="11dp"
                android:layout_height="match_parent"
                android:background="@drawable/icon_task_calendar"
                android:layout_marginEnd="4dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/taskToday"
                android:textSize="10sp"
                android:fontFamily="@font/amaranth_regular"
                android:textColor="?taskDescriptionTextColor"
                android:layout_marginEnd="10dp"/>

            <View
                android:layout_width="12dp"
                android:layout_height="match_parent"
                android:background="@drawable/icon_task_clock"
                android:layout_marginEnd="4dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/taskTimeHolder"
                android:textSize="10sp"
                android:fontFamily="@font/amaranth_regular"
                android:textColor="?taskDescriptionTextColor"/>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="end">

            <LinearLayout
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal">

                <View
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:background="@drawable/icon_task_star"/>


            </LinearLayout>



        </LinearLayout>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>